--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
 ---
 layout: main
 ---
+
+{% for post in paginator.posts %}
+ <a title="{{ post.title }}" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+{% endfor %}
