--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ locale: en
 <li>
 <div>
 <a href="https://demogamesfree.pragmaticplay.net/gs2c/openGame.do?lang=id&cur=IDR&jurisdiction=99&gameSymbol={{ block.symbol }}">
- <img src="{{ block.img | prepend: site.baseurl }}"/>
+ <img src="./assets/img/{{ block.img }}"/>
  </a>
 </div>
 </li>
