--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@ locale: en
 <div>
 <a href="https://demogamesfree.pragmaticplay.net/gs2c/openGame.do?lang=id&cur=IDR&jurisdiction=99&gameSymbol={{ block.symbol }}">
  <img src="./assets/img/{{ block.img }}"/>
- </a>
+</a>
+{{ block.title }}
 </div>
 </li>
 {% endfor %}
